--- a/flutter_plugin/example/pubspec.yaml
+++ b/flutter_plugin/example/pubspec.yaml
@@ -1,17 +1,6 @@
-name: downloader
-description: A new Flutter application.
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+name: flutter_plugin_example
+description: Demonstrates how to use the flutter_plugin plugin.
+publish_to: 'none'
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -24,16 +13,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-  flutter_downloader: any
-  path_provider: any
-  permission_handler: any
-  progress_dialog: any
-  toast: any
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_plugin:
+    path: ../
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
